# effective-tribble

./: README.md
multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainClienteMulMatrix.cpp  mainServidorMulMatrix  mainServidorMulMatrix.cpp  main_multMatrix.cpp  mulmatrix_imp.h  mulmatrix_stub.h  multMatrix  multmatrix.cpp  multmatrix.h  multmatrix_imp.cpp  multmatrix_stub.cpp  utils.h
